<resources>
    <string name="app_name">CovoitApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_success">login success</string>
    <string name="login">Connexion</string>
    <string name="email">Email</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>

    <string name="Password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="numero">Numero</string>
    <string name="repeat_password">retaper password</string>
    <string name="go">Connexion</string>
    <string name="register">Inscription</string>
    <string name="keepConnected">Rester connecté</string>
    <string name="menuNews">News</string>
    <string name="menuTopics">Topics</string>
    <string name="menuProfil">Profil</string>
    <string name="logout">Déconnexion</string>


    <string name="depart">Départ</string>
    <string name="arrive">Arrivé</string>


    <string name="titreAttente">En cours</string>
    <string name="textAttenteLogin">Vérification de l\'email et du password</string>


    <string name="textAttenteInscription">Inscription en cours</string>
    <string name="textInscriptionReussi">Inscription reussi, veuillez vous connectez</string>
    <string name="textInscriptionError">Inscription raté, user déjà inscrit</string>


    <string name="msgErrorLogin">email et/ou password faux</string>
    <string name="msgErrorNetwork">Erreur réseau</string>
    <string name="msgErrorNetworkNews">Erreur réseau, récupération des news local</string>
    <string name="msgErrorNetworkTopics">Erreur réseau, récupération des topics local</string>

    <string name="msgSuccesUpdNews">Modification réussi</string>

    <string name="msgSuccesDel">Suppression réussi</string>
    <string name="btnAccepter">Accepter</string>
    <string name="btnRefuser">Refuser</string>

</resources>
